# MEPhI

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Readme.txt
lib/: prog.cpp  prog.h  xnum.cpp  xnum_dynamic.cpp  xnum_full_static.cpp  xnum_static.cpp
lib/includes/: xnum.h  xnum_dynamic.h  xnum_full_static.h  xnum_static.h
src/: full_static.cpp  main.cpp  main_dynamic.cpp  main_static.cpp
task_1/: CMakeLists.txt  main.cpp  prog.cpp  prog.h
task_1/FINAL/: prog.cpp  prog.h
task_1/FINAL 2/: main.cpp  prog.cpp  prog.h  start.bat
task_1/tests/: test_1.t  test_2.t  test_3.t  test_4.t
task_1/try 1/: main.cpp  prog.cpp  prog.h  start.bat
task_1/try 2/: main.cpp  prog.cpp  prog.h
tests/: dynamic_test.cpp  full_static_test.cpp  static_test.cpp  test_1.cpp
